--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -7,7 +7,7 @@
     
     .main {
         display: grid;
-        grid-template-columns: auto 95%;
+        grid-template-columns: 5% 95%;
         margin-top: 2rem;
     }
     
